--- a/Linx6/Demo.folder/Demo.properties
+++ b/Linx6/Demo.folder/Demo.properties
@@ -1,5 +1,11 @@
 {
   "Id": "Uvl3",
   "Name": "Demo",
-  "Items": []
+  "Items": [
+    "PostMessageToSlack.function",
+    "PostMessageToChannelForChannelName.function",
+    "PostMessageToAllChannels.function",
+    "PostJSONMessageToSlack.function",
+    "PostEmailContentsToSlack.function"
+  ]
 }
