--- a/Linx6/Slack.folder/Channels.folder/Channels.properties
+++ b/Linx6/Slack.folder/Channels.folder/Channels.properties
@@ -3,10 +3,10 @@
   "Name": "Channels",
   "Items": [
     "GetChannels.function",
+    "response.type",
     "channel.type",
-    "channel_channels.type",
-    "channel_channels_Type.type",
-    "channel_response_metadata.type",
+    "channelType.type",
+    "responseMetadata.type",
     "GetChannelForName.function"
   ]
 }
