--- a/Linx6/Slack.folder/Channels.folder/GetChannels.function/GetChannels.properties
+++ b/Linx6/Slack.folder/Channels.folder/GetChannels.function/GetChannels.properties
@@ -2,7 +2,7 @@
   "Id": "kVmh",
   "Name": "GetChannels",
   "SingleInstance": false,
-  "Result": "List:Custom:qwhl",
+  "Result": "List:Custom:0Yfv",
   "Functions": [
     {
       "Id": "l4Rz",
