--- a/Linx6/Slack.folder/ObjectDefinition.folder/ObjectDefinition.properties
+++ b/Linx6/Slack.folder/ObjectDefinition.folder/ObjectDefinition.properties
@@ -2,6 +2,7 @@
   "Id": "qd5k",
   "Name": "ObjectDefinition",
   "Items": [
-    "Template.folder"
+    "Template.folder",
+    "email.folder"
   ]
 }
