--- a/Linx6/Utilities.folder/BuildSampleBlock.function/BuildSampleBlock.properties
+++ b/Linx6/Utilities.folder/BuildSampleBlock.function/BuildSampleBlock.properties
@@ -24,6 +24,12 @@
       "Path": "HeaderField.function"
     },
     {
+      "Id": "SvQc",
+      "Name": "ClearList",
+      "Type": "Linx:ClearList",
+      "Path": "ClearList.function"
+    },
+    {
       "Id": "tUNo",
       "Name": "AddHeaderFieldToBlock",
       "Type": "Linx:AddToList",
