--- a/Linx6/Demo.folder/PostJSONMessageToSlack.function/PostJSONMessageToSlack.properties
+++ b/Linx6/Demo.folder/PostJSONMessageToSlack.function/PostJSONMessageToSlack.properties
@@ -9,6 +9,14 @@
       "Id": "FAZm",
       "Name": "TextFileRead",
       "Type": "File:TextFileRead",
+      "ExecutionPaths": [
+        {
+          "Id": "4xi6",
+          "PluginId": "ForEachLine",
+          "Name": "ForEachLine",
+          "Functions": []
+        }
+      ],
       "Path": "TextFileRead.function"
     },
     {
