--- a/Linx6/Demo.folder/PostEmailContentsToSlack.function/PostEmailContentsToSlack.properties
+++ b/Linx6/Demo.folder/PostEmailContentsToSlack.function/PostEmailContentsToSlack.properties
@@ -5,6 +5,12 @@
   "Result": "Compiled:String",
   "Functions": [
     {
+      "Id": "mbZv",
+      "Name": "_Result",
+      "Type": "Linx:String",
+      "Path": "_Result.function"
+    },
+    {
       "Id": "KVjJ",
       "Name": "ReadEmail",
       "Type": "Email:ReadEmail",
@@ -63,6 +69,12 @@
         }
       ],
       "Path": "ReadEmail.function"
+    },
+    {
+      "Id": "8UcC",
+      "Name": "_Return",
+      "Type": "Linx:Return",
+      "Path": "_Return.function"
     }
   ]
 }
