--- a/Linx6/Demo.folder/PostJSONMessageToSlack.function/PostJSONMessageToSlack.properties
+++ b/Linx6/Demo.folder/PostJSONMessageToSlack.function/PostJSONMessageToSlack.properties
@@ -18,10 +18,10 @@
       "Path": "PostMessageAPI.function"
     },
     {
-      "Id": "HVh1",
-      "Name": "SetValueResult",
-      "Type": "Linx:SetValue",
-      "Path": "SetValueResult.function"
+      "Id": "5MkS",
+      "Name": "_Return",
+      "Type": "Linx:Return",
+      "Path": "_Return.function"
     }
   ]
 }
