--- a/Linx6/Slack.folder/Channels.folder/GetChannels.function/GetChannels.properties
+++ b/Linx6/Slack.folder/Channels.folder/GetChannels.function/GetChannels.properties
@@ -11,10 +11,10 @@
       "Path": "CallRESTEndpoint.function"
     },
     {
-      "Id": "PQZ6",
-      "Name": "SetValueResult",
-      "Type": "Linx:SetValue",
-      "Path": "SetValueResult.function"
+      "Id": "wT8B",
+      "Name": "_Return",
+      "Type": "Linx:Return",
+      "Path": "_Return.function"
     }
   ]
 }
