--- a/Linx6/Utilities.folder/BuildSampleBlock.function/BuildSampleBlock.properties
+++ b/Linx6/Utilities.folder/BuildSampleBlock.function/BuildSampleBlock.properties
@@ -54,10 +54,10 @@
       "Path": "AddToSectionFieldToBlock.function"
     },
     {
-      "Id": "YKlC",
-      "Name": "SetValueResult",
-      "Type": "Linx:SetValue",
-      "Path": "SetValueResult.function"
+      "Id": "EZVO",
+      "Name": "_Return",
+      "Type": "Linx:Return",
+      "Path": "_Return.function"
     }
   ]
 }
