--- a/Linx6/Slack.folder/Channels.folder/GetChannelForName.function/GetChannelForName.properties
+++ b/Linx6/Slack.folder/Channels.folder/GetChannelForName.function/GetChannelForName.properties
@@ -12,10 +12,10 @@
       "Path": "GetChannels.function"
     },
     {
-      "Id": "Cv5B",
-      "Name": "SetValueResult",
-      "Type": "Linx:SetValue",
-      "Path": "SetValueResult.function"
+      "Id": "2vBx",
+      "Name": "_Return",
+      "Type": "Linx:Return",
+      "Path": "_Return.function"
     }
   ]
 }
