--- a/Linx6/Utilities.folder/AuthorizationTest.function/AuthorizationTest.properties
+++ b/Linx6/Utilities.folder/AuthorizationTest.function/AuthorizationTest.properties
@@ -11,10 +11,10 @@
       "Path": "CallRESTEndpoint.function"
     },
     {
-      "Id": "WmDb",
-      "Name": "SetValueResult",
-      "Type": "Linx:SetValue",
-      "Path": "SetValueResult.function"
+      "Id": "pb7d",
+      "Name": "_Return",
+      "Type": "Linx:Return",
+      "Path": "_Return.function"
     }
   ]
 }
