--- a/Linx6/Utilities.folder/PostMessageAPI.function/PostMessageAPI.properties
+++ b/Linx6/Utilities.folder/PostMessageAPI.function/PostMessageAPI.properties
@@ -12,10 +12,10 @@
       "Path": "CallRESTEndpoint.function"
     },
     {
-      "Id": "8l42",
-      "Name": "SetValueResult",
-      "Type": "Linx:SetValue",
-      "Path": "SetValueResult.function"
+      "Id": "WuX6",
+      "Name": "_Return",
+      "Type": "Linx:Return",
+      "Path": "_Return.function"
     }
   ]
 }
